--- a/Tutorials/3D Space Combat/3D Space Combat.Plugins.csproj
+++ b/Tutorials/3D Space Combat/3D Space Combat.Plugins.csproj
@@ -52,9 +52,6 @@
     <Reference Include="UnityEngine">
       <HintPath>Library\UnityAssemblies\UnityEngine.dll</HintPath>
     </Reference>
-    <Reference Include="UnityEngine.Advertisements">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Advertisements.dll</HintPath>
-    </Reference>
     <Reference Include="UnityEngine.UI">
       <HintPath>Library\UnityAssemblies\UnityEngine.UI.dll</HintPath>
     </Reference>
@@ -69,9 +66,6 @@
     </Reference>
     <Reference Include="UnityEngine.HoloLens">
       <HintPath>Library\UnityAssemblies\UnityEngine.HoloLens.dll</HintPath>
-    </Reference>
-    <Reference Include="UnityEngine.Purchasing">
-      <HintPath>Library\UnityAssemblies\UnityEngine.Purchasing.dll</HintPath>
     </Reference>
     <Reference Include="UnityEngine.VR">
       <HintPath>Library\UnityAssemblies\UnityEngine.VR.dll</HintPath>
@@ -114,6 +108,7 @@
     <None Include="Assets\Shaders\RadialBlur.shader" />
     <None Include="Assets\Shaders\Shield.shader" />
     <None Include="Assets\Shaders\SkyboxHDR.shader" />
+    <None Include="Assets\Shaders\_old_RadialBlur.shader" />
     <None Include="Assets\Standard Assets\Effects\AmbientOcclusion\Resources\AmbientOcclusion.cginc" />
     <None Include="Assets\Standard Assets\Effects\AmbientOcclusion\Resources\AmbientOcclusion.shader" />
     <None Include="Assets\Standard Assets\Effects\AntiAliasing\FXAA\Resources\FXAA.shader" />
@@ -139,7 +134,9 @@
     <None Include="Assets\_Third Party\EarthRendering Free\Atmosphere.shader" />
     <None Include="Assets\_Third Party\EarthRendering Free\Earth.shader" />
     <None Include="Assets\_Third Party\EffectExamples\Shared\Shaders\SurfaceShader_VC.shader" />
+    <None Include="Assets\_Third Party\GOKit\Plugins\GoKit\easing\easeEquationsLicense.txt" />
     <None Include="Assets\_Third Party\GalaxyBox1\instructions.txt" />
+    <None Include="Assets\_Third Party\More PostProcessing Effects\Shaders\RadialBlur.shader" />
     <None Include="Assets\_Third Party\Standard Assets\Cameras\CameraGuidelines.txt" />
     <None Include="Assets\_Third Party\Standard Assets\CrossPlatformInput\CrossPlatformInputGuidelines.txt" />
     <None Include="Assets\_Third Party\Standard Assets\Effects\GlassRefraction\Shaders\GlassStainedBumpDistort.shader" />
