Refactored thrusters so they have their own components called Thrusters, which are all controlled by another component called ThrusterGroup by the parent Player component

--- a/Tutorials/3D Space Combat/3D Space Combat.csproj
+++ b/Tutorials/3D Space Combat/3D Space Combat.csproj
@@ -167,6 +167,8 @@
     <Compile Include="Assets\Scripts\TargetIndicator.cs" />
     <Compile Include="Assets\Scripts\TargetableObject.cs" />
     <Compile Include="Assets\Scripts\TestGameManager.cs" />
+    <Compile Include="Assets\Scripts\Thruster.cs" />
+    <Compile Include="Assets\Scripts\ThrusterGroup.cs" />
     <Compile Include="Assets\Scripts\Timer.cs" />
     <Compile Include="Assets\Scripts\UI\CooldownBar.cs" />
     <Compile Include="Assets\Scripts\UIProgressBarController.cs" />
