--- a/.gitignore
+++ b/.gitignore
@@ -1,87 +1,7 @@
-# =============== #
-# Unity generated #
-# =============== #
-Temp/
-Library/
+Tutorials/3D Space Combat/Library/
+Tutorials/Dumping Project/Library/
 Builds/
-obj/
-AtmosphericScattering/
-Dumping Project/
-_Third Party/
-
-# ===================================== #
-# Visual Studio / MonoDevelop generated #
-# ===================================== #
-ExportedObj/
-obj/
-*.svd
-*.userprefs
-/*.csproj
-*.pidb
-*.suo
-/*.sln
-*.user
-*.unityproj
-*.booproj
-
-# ============ #
-# OS generated #
-# ============ #
-.DS_Store
-.DS_Store?
-._*
-.Spotlight-V100
-.Trashes
-ehthumbs.db
-Thumbs.db
-
-# ======= #
-# Windows #
-# ======= #
-
-# Folder config file
-# ==================
-Desktop.ini
-
-# Recycle Bin used on file shares
-# ===============================
-$RECYCLE.BIN/
-
-# Installer files
-# ===============
-*.cab
-*.msi
-*.msm
-*.msp
-
-# Shortcuts
-# =========
-*.lnk
-
-# === #
-# OSX #
-# === #
-.DS_Store
-.AppleDouble
-.LSOverride
-
-# Thumbnails
-# ==========
-._*
-
-# Files that might appear in the root of a volume
-.DocumentRevisions-V100
-.fseventsd
-.Spotlight-V100
-.TemporaryItems
-.Trashes
-.VolumeIcon.icns
-
-# Directories potentially created on remote AFP share
-.AppleDB
-.AppleDesktop
-Network Trash Folder
-Temporary Items
-.apdisk
-
 Tutorials/3D Space Combat/Assets/_Third Party/
+Tutorials/3D Space Combat/Temp/
+Tutorials/Dumping Project/Assets/Scenes/Atmospherics/LightingData.asset
+*.psd
